--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -13,6 +13,7 @@
         android:visibility="visible">
 
         <LinearLayout
+            android:id="@+id/help_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
